--- a/Config/config.json
+++ b/Config/config.json
@@ -10,13 +10,6 @@
       "favicon_url":"",
       "logo":false
    },
-   "supported":{
-      "eywek.shop":">=0.4.0",
-      "eywek.support":">=0.2.0",
-      "eywek.vote":">=0.7.0",
-      "eywek.factionranking":">=0.2.1",
-      "vavaballz.myfaq":">=1.0.0",
-      "empiredev.listmembers":">=1.1.2"
-   },
+   "supported":{},
    "slider":true
 }
